# nasnet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: convert_weights.py
src/nasnet/: __init__.py  model.py  pretrained.py
src/nasnet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nasnet/weights/: MotorNet.pt  UberNet_N50_L1.pt  uStimNet.pt  uStimNet_artifact.pt
tests/: conftest.py  test_model.py  test_pretrained.py
