[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nasnet"
version = "0.1.0"
description = "PyTorch NASNet spike sorter (Issar et al. 2020)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy>=1.24",
]
convert = [
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nasnet = ["weights/*.pt"]
